:boom: Changed REST endpoint rate limits management
The rate limits are now expected to be defined either at exchange or API group level, but no more and enpoint level. 'rateLimit' property of RestEndpointDescriptor is now a plain 'String' list referencing ids of rate limits defined in enclosing group or exchange.
ExchangeInterface, ExchangeApi and their implmentation generation has been tweaked so RateLimits are final fields with accessors, that custom request interceptors could for instance modify if they depend on configuration properties (like API grade).
Exchange is now passed as final property of each API group with accessor, so request interceptor can retrieve enclosing exchange.